Address Copilot review comments
- Add preview script to package.json
- Remove tailwind.config.js reference (Tailwind 4 doesn't need it)
- Merge main to include ESLint updates

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "lint": "eslint . --max-warnings 0"
+    "lint": "eslint . --max-warnings 0",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
