--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -54,6 +54,29 @@ jobs:
     if: github.event.action == 'closed'
 
     steps:
+      - name: Delete Netlify deployment
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          PR_NUMBER: ${{ github.event.number }}
+        run: |
+          # Get deployments for this PR alias
+          DEPLOYS=$(curl -s -H "Authorization: Bearer $NETLIFY_AUTH_TOKEN" \
+            "https://api.netlify.com/api/v1/sites/$NETLIFY_SITE_ID/deploys")
+
+          # Find and delete deployments with the PR alias
+          echo "$DEPLOYS" | jq -r --arg alias "pr-$PR_NUMBER" \
+            '.[] | select(.name == $alias or .deploy_ssl_url | contains($alias)) | .id' | \
+          while read deploy_id; do
+            if [ -n "$deploy_id" ]; then
+              echo "Deleting deployment: $deploy_id"
+              curl -X DELETE -H "Authorization: Bearer $NETLIFY_AUTH_TOKEN" \
+                "https://api.netlify.com/api/v1/deploys/$deploy_id"
+            fi
+          done
+
+          echo "Cleanup completed"
+
       - name: Comment on PR
         uses: actions/github-script@v7
         with:
