Fix deployment cleanup logic and site name consistency
- Fix jq filter to only check deploy_ssl_url (name field doesn't exist)
- Update all references from 'idunn-pr-previews' to 'idunnis-previews' for consistency
- Addresses Copilot feedback on deployment deletion and documentation accuracy

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -66,7 +66,7 @@ jobs:
 
           # Find and delete deployments with the PR alias
           echo "$DEPLOYS" | jq -r --arg alias "pr-$PR_NUMBER" \
-            '.[] | select(.name == $alias or .deploy_ssl_url | contains($alias)) | .id' | \
+            '.[] | select(.deploy_ssl_url | contains($alias)) | .id' | \
           while read deploy_id; do
             if [ -n "$deploy_id" ]; then
               echo "Deleting deployment: $deploy_id"
